增加一个scheduler的测试（还无法运行，需要更多工作）